style: change method name